--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #f9fc89;
 }
 
 p {
@@ -31,4 +32,4 @@ p {
         background-color: black;
         color: #f7ff4f;
       }
-      
+    
