Updated a form onto the site

--- a/style.css
+++ b/style.css
@@ -32,4 +32,40 @@ p {
         background-color: black;
         color: #f7ff4f;
       }
-    
+
+nav :hover {
+    background-color: grey;
+    color: white;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    padding: 20px;
+    border: 1px solid white;
+    border-radius: 5px;
+}
+
+label {
+    margin-bottom: 5px;
+}
+
+input {
+    padding: 8px;
+    margin-bottom: 16px;
+    border: 1px solid white
+}
+
+button {
+    background-color: grey;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: black;
+    color: white;
+}
